--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="architecture.android.androidarchitecture.MainActivity">
+    tools:context="architecture.android.androidarchitecture.forecastListScreen.ForecastListActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/forecastList"
